# MicroTracker_V0

./: .gitignore  README.md  pyproject.toml  requirements.txt
gui/: main_window.py
scripts/: manual_correction.py  test_all_frames.py  test_detection.py  test_diagnostics.py  test_gap_closing.py  test_linking.py  test_merg_quality.py  test_selected_tracker.py  test_selected_tracker_many_frames.py  test_trajectory.py  test_video_loading.py
src/trackfar/: detection.py  diagnostics.py  gap_closing.py  linking.py  load_video.py  selected_tracker.py  trajectory.py  visualization.py
tests/: test_core.py
